- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    6.2
- 
    None
- 
        cd62ba232a (qt/qtdeclarative/dev) cd62ba232a (qt/tqtc-qtdeclarative/dev)
Steps to reproduce:
- Run code below
- Go into a directory
- Click the "up" arrow or press Alt+Up
The expected behaviour is that the directory that you were previously in would be selected, but the actual behaviour is that a different directory is selected.
import QtQuick import QtQuick.Controls import QtQuick.Dialogs ApplicationWindow { id: root width: 800 height: 600 visible: true FileDialog { visible: true currentFolder: "file:///tmp" } }
- relates to
- 
                    QTBUG-101488 tst_QQuickFileDialogImpl is flaky -         
- In Progress
 
-