FileDialog: fix selectedFile being incorrect when going up a directory

The code was assuming that directories are always shown first, which
is not always the case since 26f3b70119483ebb27dab83b3d60278685a41ff7.
Fix this by using the fileList function, which takes into account the
ShowDirectoriesFirst theme hint.

Fixes: QTBUG-106690
Pick-to: 6.4
Change-Id: Ib6df80ee35cef50b5f47f9ead81b7ee3684610f4
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>